--- a/tiff2png.ipynb
+++ b/tiff2png.ipynb
@@ -1,65 +1,122 @@
 {
- "cells": [
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c9dfa593",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import rasterio\n",
-    "import cv2\n",
-    "import numpy as np\n",
-    "from pathlib import Path"
-   ]
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/JosephGyegyiri/Xview2-Geotiff2Png/blob/main/tiff2png.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 3,
+      "id": "c9dfa593",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "c9dfa593",
+        "outputId": "2a5120be-a374-443a-b53a-7516cb66df84"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
+            "Requirement already satisfied: rasterio in /usr/local/lib/python3.10/dist-packages (1.3.7)\n",
+            "Requirement already satisfied: affine in /usr/local/lib/python3.10/dist-packages (from rasterio) (2.4.0)\n",
+            "Requirement already satisfied: attrs in /usr/local/lib/python3.10/dist-packages (from rasterio) (23.1.0)\n",
+            "Requirement already satisfied: certifi in /usr/local/lib/python3.10/dist-packages (from rasterio) (2022.12.7)\n",
+            "Requirement already satisfied: click>=4.0 in /usr/local/lib/python3.10/dist-packages (from rasterio) (8.1.3)\n",
+            "Requirement already satisfied: cligj>=0.5 in /usr/local/lib/python3.10/dist-packages (from rasterio) (0.7.2)\n",
+            "Requirement already satisfied: numpy>=1.18 in /usr/local/lib/python3.10/dist-packages (from rasterio) (1.22.4)\n",
+            "Requirement already satisfied: snuggs>=1.4.1 in /usr/local/lib/python3.10/dist-packages (from rasterio) (1.4.7)\n",
+            "Requirement already satisfied: click-plugins in /usr/local/lib/python3.10/dist-packages (from rasterio) (1.1.1)\n",
+            "Requirement already satisfied: setuptools in /usr/local/lib/python3.10/dist-packages (from rasterio) (67.7.2)\n",
+            "Requirement already satisfied: pyparsing>=2.1.6 in /usr/local/lib/python3.10/dist-packages (from snuggs>=1.4.1->rasterio) (3.0.9)\n",
+            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
+            "Requirement already satisfied: opencv-python in /usr/local/lib/python3.10/dist-packages (4.7.0.72)\n",
+            "Requirement already satisfied: numpy>=1.21.2 in /usr/local/lib/python3.10/dist-packages (from opencv-python) (1.22.4)\n"
+          ]
+        }
+      ],
+      "source": [
+        "!pip install rasterio\n",
+        "!pip install opencv-python"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import rasterio\n",
+        "import cv2\n",
+        "import numpy as np\n",
+        "from pathlib import Path"
+      ],
+      "metadata": {
+        "id": "CbkgqFq5Y1AC"
+      },
+      "id": "CbkgqFq5Y1AC",
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "b6c625f9",
+      "metadata": {
+        "id": "b6c625f9"
+      },
+      "outputs": [],
+      "source": [
+        "\n",
+        "def convert_tif_to_png(tif_path, png_path):\n",
+        "    with rasterio.open(tif_path, \"r\") as tif_file:\n",
+        "        # Convert to numpy arrays\n",
+        "        bands = tif_file.read()\n",
+        "        rgb = bands[:3, ...]\n",
+        "        rgb = np.moveaxis(rgb, 0, 2).astype(np.float32)\n",
+        "        cv2.imwrite(str(png_path), cv2.cvtColor(rgb, cv2.COLOR_RGB2BGR))\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "    tifs_path = Path(r\"C:/Users/Josef2/anaconda3/Codes/spacenet/images\")\n",
+        "    output_path = Path(r\"C:/Users/Josef2/anaconda3/Codes/spacenet/pop\")\n",
+        "\n",
+        "    for tif_file in tifs_path.glob(\"**/*.tif\"):\n",
+        "        relative_path = tif_file.relative_to(tifs_path)\n",
+        "        png_path = output_path / relative_path.with_suffix(\".png\")\n",
+        "        png_path.parent.mkdir(parents=True, exist_ok=True)\n",
+        "        convert_tif_to_png(tif_file, png_path)\n"
+      ]
+    }
+  ],
+  "metadata": {
+    "kernelspec": {
+      "display_name": "Python 3 (ipykernel)",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.7.16"
+    },
+    "colab": {
+      "provenance": [],
+      "include_colab_link": true
+    }
   },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b6c625f9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "def convert_tif_to_png(tif_path, png_path):\n",
-    "    with rasterio.open(tif_path, \"r\") as tif_file:\n",
-    "        # Convert to numpy arrays\n",
-    "        bands = tif_file.read()\n",
-    "        rgb = bands[:3, ...]\n",
-    "        rgb = np.moveaxis(rgb, 0, 2).astype(np.float32)\n",
-    "        cv2.imwrite(str(png_path), cv2.cvtColor(rgb, cv2.COLOR_RGB2BGR))\n",
-    "\n",
-    "if __name__ == '__main__':\n",
-    "    tifs_path = Path(r\"C:/Users/Josef2/anaconda3/Codes/spacenet/images\")\n",
-    "    output_path = Path(r\"C:/Users/Josef2/anaconda3/Codes/spacenet/pop\")\n",
-    "\n",
-    "    for tif_file in tifs_path.glob(\"**/*.tif\"):\n",
-    "        relative_path = tif_file.relative_to(tifs_path)\n",
-    "        png_path = output_path / relative_path.with_suffix(\".png\")\n",
-    "        png_path.parent.mkdir(parents=True, exist_ok=True)\n",
-    "        convert_tif_to_png(tif_file, png_path)\n"
-   ]
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.16"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 5
+  "nbformat": 4,
+  "nbformat_minor": 5
 }
