--- a/tiff2png.ipynb
+++ b/tiff2png.ipynb
@@ -73,6 +73,7 @@
       },
       "outputs": [],
       "source": [
+        "from os.path import exists\n",
         "\n",
         "def convert_tif_to_png(tif_path, png_path):\n",
         "    with rasterio.open(tif_path, \"r\") as tif_file:\n",
@@ -83,9 +84,9 @@
         "        cv2.imwrite(str(png_path), cv2.cvtColor(rgb, cv2.COLOR_RGB2BGR))\n",
         "\n",
         "if __name__ == '__main__':\n",
-        "    tifs_path = Path(r\"C:/Users/Josef2/anaconda3/Codes/spacenet/images\")\n",
-        "    output_path = Path(r\"C:/Users/Josef2/anaconda3/Codes/spacenet/pop\")\n",
-        "\n",
+        "    tifs_path = \"data/input\"\n",
+        "    output_path = \"data/output\"\n",
+        "    !mkdir(output_path, exists=True)\n",
         "    for tif_file in tifs_path.glob(\"**/*.tif\"):\n",
         "        relative_path = tif_file.relative_to(tifs_path)\n",
         "        png_path = output_path / relative_path.with_suffix(\".png\")\n",
