--- a/tiff2png.ipynb
+++ b/tiff2png.ipynb
@@ -12,14 +12,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "c9dfa593",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "c9dfa593",
-        "outputId": "2a5120be-a374-443a-b53a-7516cb66df84"
+        "outputId": "627b5c28-c8bf-4ff2-fe59-fe561b8b67e7"
       },
       "outputs": [
         {
@@ -27,17 +27,25 @@
           "name": "stdout",
           "text": [
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
-            "Requirement already satisfied: rasterio in /usr/local/lib/python3.10/dist-packages (1.3.7)\n",
-            "Requirement already satisfied: affine in /usr/local/lib/python3.10/dist-packages (from rasterio) (2.4.0)\n",
+            "Collecting rasterio\n",
+            "  Downloading rasterio-1.3.7-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (21.3 MB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m21.3/21.3 MB\u001b[0m \u001b[31m63.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hCollecting affine (from rasterio)\n",
+            "  Downloading affine-2.4.0-py3-none-any.whl (15 kB)\n",
             "Requirement already satisfied: attrs in /usr/local/lib/python3.10/dist-packages (from rasterio) (23.1.0)\n",
             "Requirement already satisfied: certifi in /usr/local/lib/python3.10/dist-packages (from rasterio) (2022.12.7)\n",
             "Requirement already satisfied: click>=4.0 in /usr/local/lib/python3.10/dist-packages (from rasterio) (8.1.3)\n",
-            "Requirement already satisfied: cligj>=0.5 in /usr/local/lib/python3.10/dist-packages (from rasterio) (0.7.2)\n",
+            "Collecting cligj>=0.5 (from rasterio)\n",
+            "  Downloading cligj-0.7.2-py3-none-any.whl (7.1 kB)\n",
             "Requirement already satisfied: numpy>=1.18 in /usr/local/lib/python3.10/dist-packages (from rasterio) (1.22.4)\n",
-            "Requirement already satisfied: snuggs>=1.4.1 in /usr/local/lib/python3.10/dist-packages (from rasterio) (1.4.7)\n",
-            "Requirement already satisfied: click-plugins in /usr/local/lib/python3.10/dist-packages (from rasterio) (1.1.1)\n",
+            "Collecting snuggs>=1.4.1 (from rasterio)\n",
+            "  Downloading snuggs-1.4.7-py3-none-any.whl (5.4 kB)\n",
+            "Collecting click-plugins (from rasterio)\n",
+            "  Downloading click_plugins-1.1.1-py2.py3-none-any.whl (7.5 kB)\n",
             "Requirement already satisfied: setuptools in /usr/local/lib/python3.10/dist-packages (from rasterio) (67.7.2)\n",
             "Requirement already satisfied: pyparsing>=2.1.6 in /usr/local/lib/python3.10/dist-packages (from snuggs>=1.4.1->rasterio) (3.0.9)\n",
+            "Installing collected packages: snuggs, cligj, click-plugins, affine, rasterio\n",
+            "Successfully installed affine-2.4.0 click-plugins-1.1.1 cligj-0.7.2 rasterio-1.3.7 snuggs-1.4.7\n",
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Requirement already satisfied: opencv-python in /usr/local/lib/python3.10/dist-packages (4.7.0.72)\n",
             "Requirement already satisfied: numpy>=1.21.2 in /usr/local/lib/python3.10/dist-packages (from opencv-python) (1.22.4)\n"
@@ -52,16 +60,43 @@
     {
       "cell_type": "code",
       "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "POA1iO8Vb37D",
+        "outputId": "9add724d-2695-4cbc-900f-4edf3d6852e9"
+      },
+      "id": "POA1iO8Vb37D",
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "import rasterio\n",
         "import cv2\n",
         "import numpy as np\n",
-        "from pathlib import Path"
+        "from pathlib import Path\n",
+        "import glob\n",
+        "import os"
       ],
       "metadata": {
         "id": "CbkgqFq5Y1AC"
       },
       "id": "CbkgqFq5Y1AC",
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -84,13 +119,13 @@
         "        cv2.imwrite(str(png_path), cv2.cvtColor(rgb, cv2.COLOR_RGB2BGR))\n",
         "\n",
         "if __name__ == '__main__':\n",
-        "    tifs_path = \"data/input\"\n",
-        "    output_path = \"data/output\"\n",
-        "    !mkdir(output_path, exists=True)\n",
-        "    for tif_file in tifs_path.glob(\"**/*.tif\"):\n",
-        "        relative_path = tif_file.relative_to(tifs_path)\n",
-        "        png_path = output_path / relative_path.with_suffix(\".png\")\n",
-        "        png_path.parent.mkdir(parents=True, exist_ok=True)\n",
+        "    tifs_path = \"/content/drive/MyDrive/Colab Notebooks/data/input\"\n",
+        "    output_path = \"/content/drive/MyDrive/Colab Notebooks/data/output\"\n",
+        "    os.makedirs(output_path, exist_ok=True)\n",
+        "    for tif_file in glob.glob(tifs_path + \"/**/*.tif\", recursive=True):\n",
+        "        relative_path = os.path.relpath(tif_file, tifs_path)\n",
+        "        png_path = os.path.join(output_path, os.path.splitext(relative_path)[0] + \".png\")\n",
+        "        os.makedirs(os.path.dirname(png_path), exist_ok=True)\n",
         "        convert_tif_to_png(tif_file, png_path)\n"
       ]
     }
